--- a/mobile/app/pages/tabs/tabs.html
+++ b/mobile/app/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs selectedIndex="1">
-  <ion-tab [root]="tab1Root" #workoutsSettings tabTitle="Workouts" tabIcon="calendar"></ion-tab>
-  <ion-tab [root]="tab2Root" #exercisesFilter tabTitle="Exercises" tabIcon="list"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Stats" tabIcon="analytics"></ion-tab>
+  <ion-tab [root]="tab1Root" [tabTitle]="'TAB_TITLE_WORKOUTS' | translate" tabIcon="calendar"></ion-tab>
+  <ion-tab [root]="tab2Root" [tabTitle]="'TAB_TITLE_EXERCISES' | translate" #exercisesFilter tabIcon="list"></ion-tab>
+  <ion-tab [root]="tab3Root" [tabTitle]="'TAB_TITLE_STATS' | translate" tabIcon="analytics"></ion-tab>
 </ion-tabs>
 
 
