Exercise toolbar has been moved to the separate component.

--- a/mobile/app/pages/exercise/exercise.html
+++ b/mobile/app/pages/exercise/exercise.html
@@ -1,7 +1,4 @@
-
-<ion-navbar *navbar>
-  <ion-title>{{exercise.name}}</ion-title>
-</ion-navbar>
+<exercise-toolbar [exercise]="exercise"></exercise-toolbar>
 
 <ion-content>
      <ion-list no-border>
