--- a/mobile/app/pages/workouts/workouts.html
+++ b/mobile/app/pages/workouts/workouts.html
@@ -1,8 +1,8 @@
 <ion-navbar *navbar>
-  <button menuToggle>
+  <!--<button menuToggle>
     <ion-icon name='menu'></ion-icon>
-  </button>
-  <ion-title>Workouts</ion-title>
+  </button>-->
+  <ion-title>Workouts Log</ion-title>
 </ion-navbar>
 
 <ion-content padding>
