Draft implementation of the exericses filtering functionality.

--- a/mobile/app/pages/exercise/exercise.html
+++ b/mobile/app/pages/exercise/exercise.html
@@ -1,4 +1,4 @@
-<exercise-toolbar [exercise]="exercise"></exercise-toolbar>
+<toolbar [title]="exercise.name"></toolbar>
 
 <ion-content>
      <ion-list no-border>
