Mirgation to the Ionic 2 beta 8 framework version.

--- a/mobile/app/pages/workouts/workouts.html
+++ b/mobile/app/pages/workouts/workouts.html
@@ -1,4 +1,9 @@
 <ion-navbar *navbar>
+  <ion-buttons left>
+    <button>
+        <ion-icon name='menu'></ion-icon>
+    </button>
+  </ion-buttons>  
   <ion-title>Workouts Log</ion-title>
 </ion-navbar>
 
