--- a/mobile/app/pages/workout/workout.html
+++ b/mobile/app/pages/workout/workout.html
@@ -2,7 +2,7 @@
 
 <workout-common-info></workout-common-info>
 
-<workout-exercises-header></workout-exercises-header>
+<workout-exercises-header [exercises]="exercises"></workout-exercises-header>
 
 <ion-content>
 </ion-content>   
