Implementation of the context menu for the schedule tempaltes.

--- a/mobile/app/pages/schedule/schedule.html
+++ b/mobile/app/pages/schedule/schedule.html
@@ -12,8 +12,10 @@
         <weeks-header [header]="header"></weeks-header>
       </ion-item-divider>
       
-      <ion-item ion-item *virtualItem="let item">
-        <day-item [item]="item"></day-item>
+      <ion-item *virtualItem="let item" class="test11">
+        <day-item [item]="item" 
+                  (proceedToWorkout)="proceedToWorkout($event)"
+                  (templateActions)="showTemplateActions($event)"></day-item>
       </ion-item>
     
     </ion-list>
