Implementation of the schedule days workouts actions processing.

--- a/mobile/app/pages/schedule/schedule.html
+++ b/mobile/app/pages/schedule/schedule.html
@@ -12,7 +12,7 @@
         <weeks-header [header]="header"></weeks-header>
       </ion-item-divider>
       
-      <ion-item *virtualItem="let item" class="test11">
+      <ion-item *virtualItem="let item">
         <day-item [item]="item" 
                   (proceedToWorkout)="proceedToWorkout($event)"
                   (templateActions)="showTemplateActions($event)"></day-item>
