Adoptation of the exercises toolbar title for different app flows.

--- a/mobile/app/pages/exercises/exercises.html
+++ b/mobile/app/pages/exercises/exercises.html
@@ -1,4 +1,5 @@
-<exercises-navbar (searchExercises)="searchExercises($event)" [isWorkoutCreationFlow]="isWorkoutCreationFlow"></exercises-navbar>
+<exercises-navbar (searchExercises)="searchExercises($event)" 
+                  [isWorkoutCreationFlow]="isWorkoutCreationFlow"></exercises-navbar>
 
 <ion-content #exercisesList>
    <exercises-list (completeExerciseSelection)="completeExerciseSelectionHandler()"
