Temporary workaround for the virtuall scroll component issue.

--- a/mobile/app/pages/workout/workout.html
+++ b/mobile/app/pages/workout/workout.html
@@ -1,21 +1,20 @@
 <toolbar [title]="toolbarTitle"></toolbar>
 
-<workout-common-info [workout]="workout" (nameInputBlurEvent)="checkCustomNameProvision()"></workout-common-info>
+<workout-common-info [workout]="workout" 
+                     (nameInputBlurEvent)="checkCustomNameProvision()"></workout-common-info>
 
 <workout-exercises-header></workout-exercises-header>
 <ion-content>
     
     <exercises-list *ngIf="workout.state === 'template'"
                     [exercises]="exercisesSelected"
-                    [exercisesSelected]="exercisesSelected" 
                     isWorkoutCreationFlow="true"
-                    [showActionButton]="false"></exercises-list>
-
+                    showActionButton="false"></exercises-list>
 
 </ion-content>   
 
 <button *ngIf="(exercisesSelected | async).length > 0" 
-        class="Workout-complete" primary fab fab-right fab-bottom
+         class="Workout-complete" primary fab fab-right fab-bottom
         (click)="completeWorkoutCreation()">
     <ion-icon name="done-all"></ion-icon>
 </button>
